--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
         padding: 130px 150px;
     }
     .section-title{
-        
+        text-align: center;
         margin-bottom: 18px;
         font-weight: 700;
         font-size: 35px;
@@ -103,4 +103,79 @@
         font-weight: 700;
         font-size: 20px;
         color: #474747;
+    }
+    /* what i do */
+    .what-i-do{
+        margin-top: 130px;
+    }
+    .skill-container{
+        display: flex;
+        gap: 24px;
+    
+    }
+    .skill{
+        background: #ffffff;
+        box-shadow: 0px 06px 50px rgb(0,0,0,0.06);
+        border-radius: 5px;
+        padding: 30px;
+        
+        
+    }
+    
+    .skill-title{
+        font-size: 20px;
+        font-weight: 700;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+    /* resume style */
+    .resume-content{
+        display: flex;
+        gap: 24px;
+    }
+    .resume-iteam{
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .resume .title{
+        font-weight: 700;
+        font-size: 25px;
+        color: #474747;
+        margin-bottom: 10px;
+
+    }
+    .resume .sub-title{
+        color: #757575;
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+    .resume .description{
+        color: #757575;
+    }
+    .resume-button{
+        margin-top: 50px;
+        text-align: center;
+    }
+    /* contact styles */
+    .contact{
+        display: flex;
+        gap: 100px;
+        background: #d3b097;
+        padding: 130px 200px;
+    }
+    .contact .section-title{
+        text-align: left;
+    }
+    .contact input[type="text"], input[type="email"], textarea{
+        margin-bottom: 24px;
+        border: 0;
+        width: 100%;
+        padding: 18px 30px;
+    }
+    input{
+        height: 64px;
+    }
+    .contact a{
+        text-decoration: none;
     }
